employer dashboard scrollbar fix

--- a/pages/Employer/AllApplicants/allApplicants.module.css
+++ b/pages/Employer/AllApplicants/allApplicants.module.css
@@ -69,7 +69,6 @@
 }
 
 .scrollbar {
-  margin-left: 15px;
   float: left;
   height: 1900px;
   overflow-y: scroll;
