--- a/pages/Employer/CandiProfileFullView/candiProfileFullView.module.css
+++ b/pages/Employer/CandiProfileFullView/candiProfileFullView.module.css
@@ -75,7 +75,6 @@
 }
 
 .scrollbar {
-  margin-left: 15px;
   float: left;
   overflow-y: auto;
   overflow-x: hidden;
